<resources>
    <string name="app_name">NBTextClassifier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_train">Train</string>
    <string name="menu_classify">Classify</string>
    <string name="menu_settings">Settings</string>

    <string name="trainBtn">Train</string>
    <string name="predictBtn">Classify</string>
    <string name="renameBtn">Rename</string>
    <string name="saveBtn">Save</string>
    <string name="defaultBtn">Restore to Default</string>

    <string name="columnTxt">Column of Text and Category</string>
    <string name="defaultrdBtn">Default(Category - Column A, Text - Column B)</string>
    <string name="customrdBtn">Custom</string>
    <string name="columnCatTxt">Category Column:</string>
    <string name="hintCatTxt">A</string>
    <string name="columnTextTxt">Text Column:</string>
    <string name="hintTextTxt">B</string>

    <string name="sheetTxt">Sheet Name</string>
    <string name="defaultrdBtnS">Default(1st Sheet)</string>
    <string name="customrdBtnS">Custom</string>
    <string name="sheetCatTxt">Sheet Name:</string>
    <string name="hintCatTxtS">Sheet1</string>

    <string name="columnTxtCls">Column of Text</string>
    <string name="defaultrdBtnCls">Default(Text - Column A)</string>


    <string-array name="models">
        <item>Model 1</item>
        <item>Model 2</item>
        <item>Model 3</item>
        <item>Model 4</item>
        <item>Model 5</item>
    </string-array>

    <string-array name="settings">
        <item>Clear All Models</item>
    </string-array>



</resources>