<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_train"
            android:icon="@drawable/ic_action_train"
            android:title="@string/menu_train" />
        <item
            android:id="@+id/nav_classify"
            android:icon="@drawable/ic_action_classify"
            android:title="@string/menu_classify" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>