<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nbtextclassifier.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_train"
        android:name="com.example.nbtextclassifier.ui.train.TrainFragment"
        android:label="@string/menu_train"
        tools:layout="@layout/fragment_train" />

    <fragment
        android:id="@+id/nav_classify"
        android:name="com.example.nbtextclassifier.ui.classify.ClassifyFragment"
        android:label="@string/menu_classify"
        tools:layout="@layout/fragment_classify" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.nbtextclassifier.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>